--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.clickable {
+  cursor: pointer;
 }
 
 @media (prefers-reduced-motion: no-preference) {
